@@ -4,13 +4,24 @@
  * DO NOT compile it as part of your application.
  */
 
-gchar *s = N_("Audio");
-gchar *s = N_("Video");
-gchar *s = N_("Images");
 gchar *s = N_("Documents");
 gchar *s = N_("Word Processor");
-gchar *s = N_("World Wide Web Page (HTML)");
+gchar *s = N_("Published Materials");
 gchar *s = N_("Spreadsheet");
+gchar *s = N_("Presentation");
+gchar *s = N_("Diagram");
+gchar *s = N_("TeX");
+gchar *s = N_("Vector Graphics");
+gchar *s = N_("World Wide Web");
 gchar *s = N_("Plain Text");
-gchar *s = N_("Source Code");
 gchar *s = N_("Extended Markup Language (XML)");
+gchar *s = N_("Information");
+gchar *s = N_("Financial");
+gchar *s = N_("Calendar");
+gchar *s = N_("Contacts");
+gchar *s = N_("Packages");
+gchar *s = N_("Software Development");
+gchar *s = N_("Source Code");
+gchar *s = N_("Audio");
+gchar *s = N_("Images");
+gchar *s = N_("Video");
